<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Blackbird</string>
    <string name="trip_details">Trip Details</string>
    <string name="space_minutes">&#160;minutes</string>
    <string name="my_location">My Location</string>
    <string name="search">Search</string>
    <string name="titulo_slider1">¿Qué es Blackbird?</string>
    <string name="descripcion_slider1">Somos la aplicación que te guiará a cualquier punto de Madrid de forma rápida y eficiente, optimizando los recursos del transporte público para hacer tu viaje más eco-friendly.</string>
    <string name="titulo_slider2">¿Cómo se usa?</string>
    <string name="Descripcion_slider2">Selecciona tu destino, elige el trayecto que prefieras, ¡Y disfruta del viaje!</string>
    <string name="titulo_slider3">¿Te apuntas?</string>
    <string name="descripcion_slider3">Cuantos más seamos, más se abrirá la información para que podamos mejorar. ¡Salta del nido de las aplicaciones privadas y vuela libre como nuestro código!</string>
    <string name="google_login" translatable="false">Google</string>
    <string name="phone_login" translatable="false">Phone</string>
    <string name="email_login" translatable="false">E-Mail</string>
    <string name="verify">Verify</string>
    <string name="google_sign_in_error">No se ha podido iniciar sesión con Google</string>
    <string name="log_in">Log In</string>
    <string name="forgot_password">Recordar contraseña</string>
    <string name="sign_up">Sign Up</string>
    <string name="incorrect_credentials">Credenciales incorrectas</string>
    <string name="e_mail" translatable="false">E-Mail</string>
    <string name="password">Contraseña</string>
    <string name="type_phone">Número de teléfono</string>
    <string name="itineraries">Itineraries</string>
    <string name="uber">Uber</string>
    <string name="my_account">My Account</string>
    <string name="past_trips">Past Trips</string>
    <string name="favourites">Favourites</string>
    <string name="log_out">Log Out</string>
    <string name="travelled_km">&#160;kms travelled</string>
    <string name="edit_preferences">Edit preferences</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="favourite_destinations">Favourite Destinations</string>
    <string name="sing_in_required">You need to sign in to use this feature</string>
    <string name="another_time">Another time</string>
    <string name="my_stats">My stats</string>
    <string name="home">Home</string>
    <string name="travelled_kilometers">travelled kilometers</string>
    <string name="avoided_emissions">avoided kg of CO2 emissions</string>
    <string name="plan_a_trip">Plan a trip</string>
    <string name="zero" translatable="false">0</string>
    <string name="stops">&#160;stops</string>
    <string name="depart_at">Depart at</string>
    <string name="arrive_by">Arrive by</string>
    <string name="destination">Destination</string>
    <string name="no_origin_dialog_title">No origin selected</string>
    <string name="no_origin_dialog_body">Please select an origin prior to selecting your destination</string>
    <string name="no_results">No results for selected route</string>
    <string name="click_to_travel">Click to travel here</string>
</resources>
