<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/ic_home"
        android:title="Home" />
    <item
        android:id="@+id/menu_trip_history"
        android:icon="@drawable/ic_history"
        android:title="@string/past_trips" />
    <item
        android:id="@+id/menu_favourite_destinations"
        android:icon="@drawable/ic_heart"
        android:title="@string/favourites" />
    <item
        android:id="@+id/menu_statistics"
        android:icon="@drawable/ic_statistics"
        android:title="@string/my_stats" />
    <item
        android:id="@+id/menu_log_out"
        android:icon="@drawable/ic_exit"
        android:title="@string/log_out"
        android:visible="false" />

</menu>
