<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/phone_login"
            android:paddingBottom="20dp"
            android:tint="@color/quantum_white_text"
            app:srcCompat="@drawable/telephone" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:background="@drawable/login_shape"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_numero_de_region"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="+34"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/txt_phone"
                    android:layout_width="184dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/type_phone"
                    android:inputType="phone" />


            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btn_login_phone"
            style="@style/ButtonSinImagen"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:background="@drawable/boton"

            android:enabled="true"
            android:gravity="center"
            android:text="@string/log_in"
            android:textColor="#FFFFFF"
            android:visibility="visible" />
        <ProgressBar
            android:id="@+id/progressbar_login_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:visibility="invisible" />

    </LinearLayout>

</RelativeLayout>